// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField masks renders TextField 1`] = `
<div
  className="ds-u-clearfix"
>
  <FormLabel
    component="label"
    fieldId="textfield_56"
    id="textfield_label_57"
  >
    Foo
  </FormLabel>
  <input
    className="ds-c-field"
    id="textfield_56"
    name="spec-field"
    type="text"
  />
</div>
`;

exports[`TextField masks renders currency mask 1`] = `
<div
  className="ds-u-clearfix"
>
  <FormLabel
    component="label"
    fieldId="textfield_58"
    id="textfield_label_59"
  >
    Foo
  </FormLabel>
  <Mask
    mask="currency"
  >
    <input
      className="ds-c-field ds-c-field--currency"
      id="textfield_58"
      name="spec-field"
      type="text"
    />
  </Mask>
</div>
`;
